<resources>
    <string name="app_name">ProMan</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_task">Add New Task</string>
    <string name="description">Description</string>
    <string name="change_description">Change description…</string>
    <string name="date_start">Date start</string>
    <string name="date_finish">Date finish</string>
    <string name="participants">Participants</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_board">Create new board</string>
    <string name="create_group">Create new group</string>
    <string name="add_participant">Add participant</string>
    <string name="create_board_hint">Enter board\'s title</string>
    <string name="create_group_hint">Enter group\'s title</string>
    <string name="add_participant_hint">Enter participant\'s address</string>
    <string name="enter_board_name">Enter board name</string>
    <string name="leave_board">Leave board</string>
    <string name="delete_board">Delete board</string>
    <string name="board_cards_headline">Boards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update_alert">Updates will be displayed after commit on server</string>
    <string name="empty_board">No groups yet. Start now!</string>
    <string name="groups_distribution">Groups distribution</string>
    <string name="gantt_chart">Gantt Chart for current month</string>
    <string name="unavailable_groups_distribution">Groups distribution is unavailable</string>
    <string name="unavailable_gantt">Gantt chart is unavailable</string>
    <string name="authentication_failure">Authentication failed</string>
    <string name="sign_up_failure">Signing up failed</string>
    <string name="time_is_not_set">Time is not set</string>
    <string name="date_is_not_set">Date is not set</string>
    <string name="sign_in_hint">Enter private key</string>
    <string name="sign_up_private_hint">Enter private key</string>
    <string name="sign_up_nickname_hint">Enter nickname</string>
    <string name="move_to_group_title">Move to&#8230;</string>
    <string name="current_user_tasks_title">Your tasks</string>
    <string-array name="motivation_array">
        <item>Don\'t waste time. Do it!</item>
        <item>The future belongs to those, who believe in beauty of their dreams</item>
        <item>You think you have forever, but you don\'t</item>
        <item>Success doesn\'t come to you. You go to it</item>
        <item>Fall seven times and stand up eight</item>
        <item>The worst bankrupt in the world is the man who has lost his enthusiasm</item>
        <item>Do what you can, with what you have, where you are</item>
        <item>You miss 100% of the shots you don\’t take</item>
        <item>Every solution breeds new problems</item>
        <item>The only thing in life achieved without effort is failure</item>
        <item>Success is the child of audacity</item>
    </string-array>
</resources>
