<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignUpActivity"
    android:background="@color/backround">

    <EditText
        android:id="@+id/sign_up_private"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/sign_up_private_hint"
        android:imeOptions="flagNoExtractUi"/>

    <EditText
        android:id="@+id/sign_up_nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="2dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_up_private"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/sign_up_nickname_hint"
        android:imeOptions="flagNoExtractUi"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_below="@id/sign_up_nickname"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:text="@string/sign_up" />


</RelativeLayout>